# desert_robot

./: .gitignore  pyproject.toml  requirements.txt
docs/: ai_handoff_2026-07-01.md  project_overview.md  user_command_manual.md
isaac/: capture_camera_frame.py  desert_heightfield_scene.py  hello_isaac_scene.py  live_rover_path_demo.py  view_usd_scene.py
scripts/: build_local_heightfield_from_capture.py  check_env.py  generate_local_subgoals.py  live_perception_planning_demo.py  plan_local_path_from_costmap.py  plan_local_subgoal_sequence.py  run_minimal_planning_demo.py
src/desert_robot/maps/: costmap.py  heightfield.py
src/desert_robot/perception/: __init__.py  depth_to_heightfield.py
src/desert_robot/planning/: astar.py  subgoal_sequence.py  subgoals.py
src/desert_robot/utils/: terrain_mesh.py
src/desert_robot/vehicles/: __init__.py  tracked_rover.py
tests/: test_astar.py  test_costmap.py  test_depth_to_heightfield.py  test_heightfield.py  test_subgoal_sequence.py  test_subgoals.py  test_terrain_mesh.py  test_torch_gpu.py  test_tracked_rover.py
