[project]
name = "desert-robot"
version = "0.1.0"
description = "Desert tree planting robot simulation and training project"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
